--- a/h-springcloud-001-eureka/h-springcloud-001-eureka-server/pom.xml
+++ b/h-springcloud-001-eureka/h-springcloud-001-eureka-server/pom.xml
@@ -17,7 +17,7 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-parent</artifactId>
-				<version>Dalston.SR2</version>
+				<version>${spring-cloud-starter-parent.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
