--- a/h-springcloud-001-eureka/pom.xml
+++ b/h-springcloud-001-eureka/pom.xml
@@ -21,5 +21,6 @@
 	<modules>
 		<module>h-springcloud-001-eureka-server</module>
 		<module>h-springcloud-001-eureka-client</module>
+		<module>h-springcloud-001-eureka-consumer</module>
 	</modules>
 </project>
