添加了 eureka consumer ribbon 服务消费者

--- a/h-springcloud-001-eureka/pom.xml
+++ b/h-springcloud-001-eureka/pom.xml
@@ -22,5 +22,6 @@
 		<module>h-springcloud-001-eureka-server</module>
 		<module>h-springcloud-001-eureka-client</module>
 		<module>h-springcloud-001-eureka-consumer</module>
+		<module>h-springcloud-001-eureka-consumer-ribbon</module>
 	</modules>
 </project>
