添加 eureka consumer feign 服务消费者

--- a/h-springcloud-001-eureka/pom.xml
+++ b/h-springcloud-001-eureka/pom.xml
@@ -23,5 +23,6 @@
 		<module>h-springcloud-001-eureka-client</module>
 		<module>h-springcloud-001-eureka-consumer</module>
 		<module>h-springcloud-001-eureka-consumer-ribbon</module>
+		<module>h-springcloud-001-eureka-consumer-feign</module>
 	</modules>
 </project>
