--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.huahouye.spring.cloud</groupId>
 	<artifactId>h-springcloud</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
+		<spring-cloud-starter-parent.version>Brixton.SR7</spring-cloud-starter-parent.version>
+	</properties>
+
 	<modules>
 		<module>h-springcloud-001-eureka</module>
+
+
+		<module>h-springcloud-002-config</module>
 	</modules>
 </project>
