添加 spring cloud config 分布式配置客户端

--- a/h-springcloud-002-config/pom.xml
+++ b/h-springcloud-002-config/pom.xml
@@ -16,6 +16,7 @@
 
 	<modules>
 		<module>h-springcloud-002-config-server</module>
-		
+
+		<module>h-springcloud-002-config-client</module>
 	</modules>
 </project>
